--- a/techpit-redux-kanban/src/index.html
+++ b/techpit-redux-kanban/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban board</title>
-  </head>
+    <script defer src="index.ts"></script>
 
+  </head>
   <body>
     <h1>Hello world!</h1>
   </body>
