--- a/techpit-redux-kanban/src/index.html
+++ b/techpit-redux-kanban/src/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban board</title>
-    <script defer src="index.ts"></script>
+    <script defer src="index.tsx"></script>
 
   </head>
   <body>
     <h1>Hello world!</h1>
+    <div id="app"></div>
   </body>
 </html>
