--- a/techpit-redux-kanban/src/index.html
+++ b/techpit-redux-kanban/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban board</title>
-    <script defer src="index.tsx"></script>
+    <link rel="stylesheet" href="https://unpkg.com/ress@2.0.4/dist/ress.min.css" crossorigin="anonymous" />
 
+    <script defer src="index.tsx"></script>
   </head>
   <body>
     <h1>Hello world!</h1>
